# sensor-compression

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  NOTICE  README.md  compose.yaml  data_frame.h  format_search.cc  platformio.ini
bind/: CMakeLists.txt  bind.cc  example.py
bind/docker/: Dockerfile  requirements.txt
docker/py/: Dockerfile
docker/pydev/: Dockerfile  requirements.txt
include/: compress.h  correction.h  data_frame.h  log_container.h  sensor.h  simple8b.h  simple8b.inl  time_util.h
include/proto/: sensor.pb.c  sensor.pb.h  sensor.proto
lib/: CMakeLists.txt
lib/include/: compress.h  compress.inl  compressed_data_frame.h  data_frame.h  data_header.h  data_stream.h  example_time_sensor.h  json.h  lerp.h  sensor.h  sensor.inl  time_util.h  uuid.h  uuid_gen.h
lib/src/: compress.cc  data_frame.cc  data_header.cc  data_stream.cc  example_time_sensor.cc  sensor.cc
lib/test/: compress_test.cc  correction_test.cc  data_frame_test.cc  data_stream_test.cc  example_time_sensor_test.cc  json_test.cc  sensor_test.cc  test_data_stream.cc
py/.Trash-5678/info/: Untitled.ipynb.trashinfo
py/.ipynb_checkpoints/: test-checkpoint.ipynb
py/ipynb/: test.ipynb
py/ipynb/.ipynb_checkpoints/: test-checkpoint.ipynb
src/: compress.cc  data_frame.cc
test/: compress_test.cc  data_frame_test.cc  proto_test.cc  sensor_test.cc
